test_programs/compile_failure/noirc_frontend_tests_cast_negative_one_to_u8_size_checks/src/main.nr

        fn main() {
            assert((-1) as u8 != 0);
        }
    